--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -68,7 +68,7 @@
 
     "custom/lock_screen": {
         "format": "",
-        "on-click": "sh -c '(sleep 0.5s; gtklock)' & disown",
+        "on-click": "sh -c '(sleep 0.5s; swaylock)' & disown",
         "tooltip": false
     },
 
