--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -58,7 +58,7 @@ env = MOZ_ENABLE_WAYLAND,1
 # Startup
 exec-once = $scriptsDir/startup
 
-exec-once = swaybg -m fill -i $HOME/.config/hypr/bg/nordic.jpg
+exec-once = swaybg -m fill -i $HOME/.config/hypr/bg/nordmount.jpg
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
